UI fixes og visibility

--- a/application/src/GUI/Styling/BannerAndTopBar.css
+++ b/application/src/GUI/Styling/BannerAndTopBar.css
@@ -22,7 +22,7 @@
 }
 
 #titleBg {
-    -fx-background-color: rgba(0, 0, 0, 0.3);
+    -fx-background-color: rgba(0, 0, 0, 0.7);
     -fx-border-radius: 0 30 0 0;
     -fx-background-radius: 0 30 0 0;
 }
